# navflex

./: README.md
navflex/: CMakeLists.txt  README.md  package.xml
navflex_autonomous_exploration_bt/: CMakeLists.txt  README.md  package.xml
navflex_autonomous_exploration_bt/behavior_trees/: fael_frontier_exploration.xml  fael_frontier_exploration_zsl1_house2_matrix.xml  fael_frontier_exploration_zsl1_house2_matrix_wm_gate.xml
navflex_autonomous_exploration_bt/launch/: fael_exploration.launch.py
navflex_autonomous_exploration_bt/params/: fael_exploration_bt_navigator.yaml  fael_exploration_bt_navigator_zsl1_house2_matrix.yaml  fael_exploration_bt_navigator_zsl1_house2_matrix_wm_gate.yaml
navflex_autonomous_exploration_bt/src/: exploration_bt_navigator.cpp
navflex_bringup/: README.md  package.xml
navflex_bringup/launch/: navflex_bringup_launch.py  tb3_manipulation_sim_launch.py
navflex_bringup/maps/: large_bright_room.pgm  large_bright_room.yaml
navflex_bringup/params/: nav2_params.yaml  nav2_params_tb3_diff.yaml  nav2_params_zsl1_house2_matrix.yaml  rogmap_params.yaml
navflex_bringup/rviz/: nav2_default_view.rviz
navflex_bringup/scripts/: ufomap_viz_crop.py
navflex_bringup/worlds/: large_bright_room.world
navflex_bt_navigator/behavior_trees/: navigate_to_pose_rogmap.xml  test_bt_navigator.xml
navflex_bt_navigator/params/: navflex_bt_navigator.yaml
navflex_bt_nodes/: navflex_tree_nodes.xml
navflex_costmap_nav/: README.md
navflex_frontier_planner/: CMakeLists.txt  README.md  global_planner_plugin.xml  package.xml
navflex_frontier_planner/include/navflex_frontier_planner/: candidate_frontier_planner.hpp  fael_frontier_core.hpp  frontier_astar_planner.hpp
navflex_frontier_planner/src/: candidate_frontier_planner.cpp  frontier_astar_planner.cpp  frontier_tools.cpp
navflex_instruction_server/: CMakeLists.txt  README.md
navflex_instruction_server/launch/: task_stack.launch.py
navflex_instruction_server/params/: semantic_landmarks.yaml
navflex_instruction_server/src/: navflex_instruction_server_node.py  navflex_semantic_map_server.py  navflex_task_server.py  navflex_vln_bridge.py
navflex_instruction_server/srv/: ExecuteTask.srv  InterpretVln.srv  ListSemanticLandmarks.srv  QuerySemanticTarget.srv  UpdateLandmark.srv
navflex_nav/: CMakeLists.txt  README.md  package.xml
navflex_nav/config/: navflex_nav.yaml
navflex_nav/include/navflex_base/: behavior_action.h  behavior_execution.h  controller_action.h  controller_execution.h  navflex_action_base.hpp  navflex_execution_base.h  planner_action.h  planner_execution.h  plugin_adapters.hpp
navflex_nav/include/navflex_nav/costmap_nav/: behavior_action_costmap_server.hpp  controller_action_costmap_server.hpp  navflex_costmap_nav.hpp  planner_action_costmap_server.hpp
navflex_nav/include/navflex_nav/rogmap_nav/: behavior_action_rogmap_server.hpp  controller_action_rogmap_server.hpp  navflex_rogmap_nav.hpp  planner_action_rogmap_server.hpp
navflex_nav/launch/: navflex_nav.launch.py
navflex_nav/src/: main.cpp
navflex_nav/src/costmap_nav/: behavior_action_costmap_server.cpp  controller_action_costmap_server.cpp  navflex_costmap_nav.cpp  planner_action_costmap_server.cpp
navflex_nav/src/navflex_base/: behavior_action.cpp  behavior_execution.cpp  controller_action.cpp  controller_execution.cpp  navflex_execution_base.cpp  planner_action.cpp  planner_execution.cpp
navflex_nav/src/rogmap_nav/: behavior_action_rogmap_server.cpp  controller_action_rogmap_server.cpp  navflex_rogmap_nav.cpp  planner_action_rogmap_server.cpp
navflex_object_nav/: CMakeLists.txt  package.xml
navflex_object_nav/navflex_obj/: __init__.py  vlm_detect.py
navflex_object_nav/src/: object_approach_node.py  object_goal_navigator_node.py  object_grounder_node.py  object_target_cli.py
navflex_object_nav/srv/: ApproachTarget.srv  DetectObject.srv
navflex_rog_map/: CMakeLists.txt  README.md  package.xml
navflex_rog_map/config/: rog_map.yaml
navflex_rog_map/include/navflex_rog_map/: footprint.hpp  rog_map.hpp  rog_map_ros.hpp
navflex_rog_map/launch/: rog_map.launch.py
navflex_rog_map/src/: footprint.cpp  rog_map.cpp  rog_map_ros.cpp  rog_map_server.cpp
navflex_rog_map/test/: test_rog_map.cpp
navflex_rogmap_core/: CMakeLists.txt  README.md  package.xml
navflex_rogmap_core/include/navflex_rogmap_core/: controller.hpp  global_planner.hpp  navflex_rogmap_core.hpp  recovery.hpp  types.hpp
navflex_rogmap_planner/: CMakeLists.txt  README.md  package.xml  plugins.xml
navflex_rogmap_planner/config/: rog_astar.yaml
navflex_rogmap_planner/include/navflex_rogmap_planner/: rog_astar_planner.hpp
navflex_rogmap_planner/src/: rog_astar_planner.cpp
navflex_wm_bt_nodes/: CMakeLists.txt  navflex_wm_tree_nodes.xml  package.xml
navflex_wm_bt_nodes/include/navflex_wm_bt_nodes/: evaluate_plan_action.hpp  path_end_pose.hpp
navflex_wm_bt_nodes/src/: evaluate_plan_action.cpp  path_end_pose.cpp
navflex_world_model/: CMakeLists.txt  README.md  package.xml
navflex_world_model/launch/: world_model.launch.py
navflex_world_model/navflex_wm/: backends.py  coherence.py  critic.py  director.py  lingbot_loader.py  pose_utils.py
navflex_world_model/params/: world_model.yaml
navflex_world_model/scripts/: gate_demo_page.py  gate_demo_run.py  gate_demo_seeds.py  lingbot_server.py  setup_lingbot_env.sh
navflex_world_model/src/: navflex_world_model_node.py
navflex_world_model/srv/: EvaluatePlan.srv  RankViewpoints.srv
navflex_world_model/test/: compare_trajectories.py  extract_real_rollout.py  fake_stack.py  probe_vlm_critics.py  rollout_scenes.py  smoke_lingbot.py  test_claude_critic.py  test_coherence.py  test_critic.py  test_openai_compat_critic.py  test_pose_utils.py  test_sidecar_contract.py
navflex_world_model/test/data/: seed_meta.json
omni_fake_node/: CMakeLists.txt
scan_planner/: CMakeLists.txt  README.md  controller_plugin.xml  package.xml
scan_planner/config/: scan_controller.yaml
scan_planner/include/scan_planner/: scan_controller.hpp
scan_planner/src/: scan_controller.cpp
(+49 files in other folders)
