<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navflex_autonomous_exploration_bt</name>
  <version>0.1.0</version>
  <description>Autonomous FAEL-style frontier exploration behavior tree for NavFlex.</description>
  <maintainer email="maintainer@example.com">NavFlex Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>navflex_bringup</exec_depend>
  <exec_depend>navflex_bt_nodes</exec_depend>
  <exec_depend>navflex_cmdbehavior</exec_depend>
  <exec_depend>navflex_nav</exec_depend>
  <exec_depend>navflex_frontier_planner</exec_depend>
  <exec_depend>nav2_route</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
