<?xml version="1.0"?>
<package format="3">
  <name>scan_planner</name>
  <version>0.2.0</version>
  <description>ROG-Map based 3D SCAN local controller for Navflex.</description>
  <maintainer email="xuqichao66@outlook.com">Navflex contributors</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>navflex_rog_map</depend>
  <depend>navflex_rogmap_core</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
